--- a/pp-website/config.toml
+++ b/pp-website/config.toml
@@ -1,5 +1,5 @@
 title = "Pure Pandemonium Podcast"
-baseURL = "https://pure-pandemonium.club/"
+baseURL = "https://www.pure-pandemonium.club/"
 languageCode = "en-us"
 theme = "ananke"
 
